# Wiverno

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml  test_docs_examples.py
.github/workflows/: tests.yml
api/: index.html
api/cli/: index.html
api/core/application/: index.html
api/core/requests/: index.html
api/core/router/: index.html
api/core/server/: index.html
api/dev/dev-server/: index.html
api/templating/templator/: index.html
api/views/base-views/: index.html
dev/: index.html
dev/architecture/: index.html
dev/benchmarks/: index.html
dev/code-style/: index.html
dev/contributing/: index.html
dev/linting/: index.html
dev/project-structure/: index.html
dev/setup/: index.html
dev/testing/: index.html
dev/type-hints/: index.html
dev/workflow/: index.html
docs/: index.md
docs/api/: cli.md  index.md
docs/api/core/: application.md  requests.md  router.md  server.md
docs/api/views/: base-views.md
docs/dev/: architecture.md  benchmarks.md  code-style.md  index.md  linting.md  project-structure.md  setup.md  testing.md  type-hints.md  workflow.md
docs/guide/: cli.md  index.md  installation.md  project-structure.md  quickstart.md  requests.md  routing.md  status-codes.md
guide/: index.html
guide/cli/: index.html
guide/installation/: index.html
guide/project-structure/: index.html
guide/quickstart/: index.html
guide/requests/: index.html
guide/routing/: index.html
guide/running/: index.html
guide/status-codes/: index.html
search/: search_index.json
tests/: README.md  conftest.py  test_integration.py  test_requests.py  test_server.py  test_wiverno.py
tests/benchmark/: test_benchmark.py
tests/integration/: test_app.py
tests/test_routing/: test_base.py  test_patterns.py  test_registry.py  test_router.py
tests/unit/: test_base_views.py  test_cli.py  test_dev_server.py  test_http_validator.py  test_main.py  test_requests.py  test_router.py  test_server.py  test_templator.py
wiverno/: __init__.py  cli.py  main.py  requests.py  server.py  templator.py
wiverno/core/: default_pages.py  requests.py  router.py  server.py
wiverno/core/routing/: base.py  patterns.py  registry.py  router.py
wiverno/dev/: dev_server.py
wiverno/static/templates/: error_500.html
wiverno/templating/: templator.py
wiverno/views/: base_views.py
